cmake_minimum_required(VERSION 3.5)
project(SQL VERSION 0.1 LANGUAGES CXX)

# Configurações globais permanecem aqui
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED COMPONENTS Widgets Sql)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

# Chame o subdiretório src
add_subdirectory(src)
